--- a/front-end/src/components/Header.scss
+++ b/front-end/src/components/Header.scss
@@ -1,11 +1,10 @@
 header {
-    background-color: skyblue;
     text-align: left;
     padding: 20px 10px;
     display: flex;
     justify-content: space-between;
     a {
-        color: #fff;
+        color: black;
         transition: color 0.3s ease;
         &:hover {
             color: darken(#fff, 20%)
