--- a/front-end/src/components/Restaurant.scss
+++ b/front-end/src/components/Restaurant.scss
@@ -1,3 +1,4 @@
+// to be edited all toLowerCase until refactor: 
 .restaurant {
     display: flex;
     flex-direction: column;
@@ -6,47 +7,43 @@
     margin: 0 .5rem 2.3rem .5rem;
 }
 
-.restaurant .image-container {
-    height: 16.66rem;
-    margin-bottom: 1rem;
-}
-
-.restaurant h2 {
+// use later: 
+// .Restaurant .image-container {
+//     height: 100px;
+//     width: 100px;
+// }
+.Restaurant h2 {
     margin-bottom: .5rem;
     font-size: 1.2rem;
     font-weight: 600;
 }
 
-.restaurant-information {
-    display: flex;
+.Restaurant-information {
     justify-content: space-between;
 }
 
-.restaurant-information p {
+.Restaurant-information p {
     font-size: .88rem;
     font-weight: 300;
     line-height: 1rem;
 }
 
-.restaurant-address {
-    display: flex;
+.Restaurant-address {
     flex-direction: column;
     justify-content: space-between;
 }
 
-.restaurant-reviews {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: right;
-}
-
-.restaurant-reviews h3 {
+// .Restaurant-reviews {
+//     flex-direction: column;
+//     justify-content: space-between;
+//     text-align: right;
+// }
+.Restaurant-reviews h3 {
     color: #CCA353;
     font-weight: 600;
 }
 
-.restaurant-reviews .rating {
+.Restaurant-reviews .rating {
     font-size: .88rem;
     line-height: 1rem;
 }
