--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,3 +2,41 @@
     text-align: center;
     font-family: 'Varela Round', sans-serif;
 }
+
+html {
+    font-size: 18px;
+}
+
+@media only screen and (max-width: 560px) {
+    html {
+        font-size: 15px;
+    }
+}
+
+input:focus {
+    outline: none;
+}
+
+
+/* Reusable Component - Image Container */
+
+.image-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    background: #000;
+}
+
+.image-container img {
+    width: 100%;
+}
+
+h1 {
+    padding: .66rem 0;
+    text-align: center;
+    background-color: #cca353;
+    font-family: Poppins, sans-serif;
+    font-size: 1.8rem;
+    color: #fff;
+}
