--- a/front-end/src/components/Header.scss
+++ b/front-end/src/components/Header.scss
@@ -1,22 +1,10 @@
 header {
-    text-align: left;
-    padding: 20px 10px;
+    text-align: right;
+    // padding: 20px 10px;
     display: flex;
-    justify-content: space-between;
-    a {
-        color: black;
-        transition: color 0.3s ease;
-        &:hover {
-            color: darken(#fff, 20%)
-        }
-    }
-    ul {
-        display: flex;
-        margin: 0;
-        padding: 0;
-        li {
-            list-style-type: none;
-            padding: 0px 10px;
-        }
-    }
+    // justify-content: space-between;
+}
+
+.logo {
+    margin: -1rem;
 }
