--- a/front-end/src/components/Search.scss
+++ b/front-end/src/components/Search.scss
@@ -92,7 +92,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: url('/img/pexels-photo-2235832.jpeg');
+    // background-image: url('/img/pexels-photo-2235832.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 25rem;
@@ -167,7 +167,7 @@
 
 @media only screen and (max-width: 560px) {
     .SearchBar {
-        background-image: url('/img/pexels-photo-2235832.jpeg');
+        // background-image: url('/img/pexels-photo-2235832.jpeg');
     }
     .SearchBar-sort-options ul {
         margin-left: 2rem;
