--- a/front-end/src/components/Search.scss
+++ b/front-end/src/components/Search.scss
@@ -88,6 +88,13 @@
 //         margin-bottom: .86rem;
 //     }
 // }
+h2 {
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .SearchBar {
     display: flex;
     flex-direction: column;
@@ -96,6 +103,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 25rem;
+}
+
+video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -3;
 }
 
 .SearchBar-sort-options ul {
@@ -108,8 +123,7 @@
 .SearchBar-sort-options li {
     cursor: pointer;
     width: 4.33rem;
-    border-bottom: 1px solid #fff;
-    padding: 0 2.58rem .33rem 2.58rem;
+    // padding: 0 2.58rem .33rem 2.58rem;
     line-height: 1.13;
     text-align: center;
     font-weight: 600;
@@ -154,7 +168,7 @@
 .SearchBar-submit a {
     border-radius: 4px;
     padding: .72rem 1.7rem;
-    background-color: #cca353;
+    background-color: #fbcf78;
     color: #ffffff;
     font-weight: 600;
     transition: background-color .5s;
