--- a/front-end/src/components/Restaurant.scss
+++ b/front-end/src/components/Restaurant.scss
@@ -1,33 +1,40 @@
 // to be edited all toLowerCase until refactor: 
-.restaurant {
+.Restaurant {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 16.66rem;
     margin: 0 .5rem 2.3rem .5rem;
+    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 5rem;
 }
 
 // use later: 
 .Restaurant .image-container {
-    height: 100px;
-    width: 100px;
-    border-radius: 2px;
+    object-fit: cover;
+    // width: 100%;
+    // height: 100%;
+    border-radius: 5px;
 }
 
 .Restaurant h2 {
-    margin-bottom: .5rem;
+    // margin-bottom: .5rem;
+    margin-top: 1rem;
     font-size: 1.2rem;
     font-weight: 600;
 }
 
 .Restaurant-information {
     justify-content: space-between;
+    display: flex;
 }
 
 .Restaurant-information p {
     font-size: .88rem;
     font-weight: 300;
-    line-height: 1rem;
+    line-height: -1rem;
 }
 
 .Restaurant-address {
