--- a/front-end/src/components/RestaurantList.scss
+++ b/front-end/src/components/RestaurantList.scss
@@ -1,6 +1,6 @@
 .RestaurantList {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     margin: 4.4rem 10%;
     // height: 10px;
