--- a/front-end/src/components/Search.scss
+++ b/front-end/src/components/Search.scss
@@ -111,6 +111,8 @@ video {
     height: 100%;
     position: absolute;
     z-index: -3;
+    border-radius: 0% 0% 2px 2px;
+    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
 }
 
 .SearchBar-sort-options ul {
