get yelp API info

--- a/front-end/src/components/Blogs/BlogCards.scss
+++ b/front-end/src/components/Blogs/BlogCards.scss
@@ -65,7 +65,7 @@ h1 {
     max-width: calc((100%) - 60px);
     font-size: 12px;
     font-weight: 700;
-    color: #fff;
+    color: black;
     background-color: #f0c36c;
     box-sizing: border-box;
 }
