--- a/front-end/src/components/Restaurant.scss
+++ b/front-end/src/components/Restaurant.scss
@@ -21,34 +21,44 @@
 
 .Restaurant h2 {
     // margin-bottom: .5rem;
-    margin-top: 1rem;
+    margin-top: 10px;
     font-size: 1.2rem;
     font-weight: 600;
+    background-color: #f0c36c;
+    background: #f0c36c;
+    color: white;
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+    padding: 1rem 20%;
 }
 
 .Restaurant-information {
-    justify-content: space-between;
     display: flex;
+    justify-content: space-between;
+    padding-left: 8px;
 }
 
 .Restaurant-information p {
+    margin-top: 10px;
     font-size: .88rem;
     font-weight: 300;
-    line-height: -1rem;
+    line-height: 50%;
 }
 
 .Restaurant-address {
     flex-direction: column;
     justify-content: space-between;
+    text-align: left;
 }
 
 .Restaurant-reviews {
+    margin-top: 25px;
     flex-direction: column;
     justify-content: space-between;
     text-align: right;
 }
 
 .Restaurant-reviews h3 {
+    margin-top: 10px;
     color: #CCA353;
     font-weight: 600;
 }
@@ -56,4 +66,9 @@
 .Restaurant-reviews .rating {
     font-size: .88rem;
     line-height: 1rem;
+}
+
+.Restaurant-number {
+    margin-top: 10px;
+    font-size: 200px;
 }
