--- a/front-end/src/components/Search.scss
+++ b/front-end/src/components/Search.scss
@@ -119,7 +119,7 @@ video {
     display: flex;
     justify-content: center;
     margin-bottom: 2.22rem;
-    color: #ffffff;
+    color: black;
 }
 
 .SearchBar-sort-options li {
@@ -134,7 +134,7 @@ video {
 }
 
 .SearchBar-sort-options li:hover {
-    color: #d4cfcf;
+    color: white;
 }
 
 .SearchBar-sort-options li.active,
@@ -174,6 +174,7 @@ video {
     color: #ffffff;
     font-weight: 600;
     transition: background-color .5s;
+    opacity: .7;
 }
 
 .SearchBar-submit a:hover {
