--- a/front-end/src/components/Search.scss
+++ b/front-end/src/components/Search.scss
@@ -120,6 +120,7 @@ video {
     justify-content: center;
     margin-bottom: 2.22rem;
     color: black;
+    margin-top: 3rem;
 }
 
 .SearchBar-sort-options li {
