--- a/front-end/src/components/Header.scss
+++ b/front-end/src/components/Header.scss
@@ -7,6 +7,7 @@ header {
 
 .logo {
     display: flex;
-    margin: -1rem;
+    margin-top: -1rem;
+    margin-left: 10rem;
     justify-content: center;
 }
