update all styling

--- a/front-end/src/components/Header.scss
+++ b/front-end/src/components/Header.scss
@@ -1,13 +1,14 @@
 header {
     text-align: right;
-    // padding: 20px 10px;
+    padding: 10px 10px;
     display: flex;
+    position: fixed;
     // justify-content: space-between;
 }
 
 .logo {
-    display: flex;
-    margin-top: -1rem;
-    margin-left: 10rem;
-    justify-content: center;
+    // display: flex;
+    // margin-top: -1rem;
+    // margin-left: 10rem;
+    // justify-content: center;
 }
