--- a/front-end/src/components/Restaurant.scss
+++ b/front-end/src/components/Restaurant.scss
@@ -9,6 +9,24 @@
     background-color: white;
     border-radius: 5px;
     margin-top: 5rem;
+    animation-name: stretch;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+    animation-delay: 0;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-fill-mode: none;
+    animation-play-state: running;
+}
+
+@keyframes stretch {
+    0% {
+        transform: scale(.3);
+    }
+    50% {}
+    100% {
+        transform: scale(1);
+    }
 }
 
 // use later: 
