--- a/front-end/src/components/Search.scss
+++ b/front-end/src/components/Search.scss
@@ -1,95 +1,5 @@
-// .SearchBar {
-//     display: flex;
-//     justify-content: center;
-//     margin-top: 20%;
-// }
-// input {
-//     height: 30px;
-//     width: 500px;
-// }
-// .button {
-//     background-color: lightgray;
-//     border-radius: 3%;
-//     border: none;
-//     width: 100px;
-// }
-// .SearchBar-sort-options ul {
-//     display: flex;
-//     justify-content: center;
-//     margin-bottom: 2.22rem;
-//     color: black;
-// }
-// .SearchBar-sort-options li {
-//     cursor: pointer;
-//     width: 4.33rem;
-//     border-bottom: 1px solid white;
-//     padding: 0 2.58rem .33rem 2.58rem;
-//     line-height: 1.13;
-//     text-align: center;
-//     font-weight: 600;
-//     font-size: .83rem;
-//     transition: color .25s;
-// }
-// .SearchBar-sort-options li:hover {
-//     color: grey;
-// }
-// .SearchBar-sort-options li.active,
-// .SearchBar-sort-options li.active:hover {
-//     border-bottom: 1px solid #f0c36c;
-//     color: #f0c36c;
-// }
-// .SearchBar-fields {
-//     display: flex;
-//     justify-content: center;
-//     margin-bottom: 2.88rem;
-// }
-// .SearchBar-fields input {
-//     height: 3rem;
-//     width: 21rem;
-//     padding: .66rem 1rem;
-//     margin-right: 2.22rem;
-//     border: 1px solid black;
-//     border-radius: 4px;
-//     font-size: 1.5rem;
-//     font-weight: 500;
-// }
-// .SearchBar-fields input:last-child {
-//     margin-right: 0;
-// }
-// .SearchBar-submit {
-//     text-align: center;
-// }
-// .SearchBar-submit div {
-//     border-radius: 4px;
-//     padding: .72rem 1.7rem;
-//     background-color: #cca353;
-//     color: black;
-//     font-weight: 600;
-//     transition: background-color .5s;
-// }
-// .SearchBar-submit div:hover {
-//     cursor: pointer;
-//     background-color: #a7874b;
-// }
-// @media only screen and (max-width: 560px) {
-//     .SearchBar {
-//         background-image: url('/img/pexels-photo-2235832.jpeg');
-//     }
-//     .SearchBar-sort-options ul {
-//         margin-left: 2rem;
-//         margin-right: 2rem;
-//     }
-//     .SearchBar-fields {
-//         flex-direction: column;
-//         align-items: center;
-//     }
-//     .SearchBar-fields input {
-//         margin-right: 0;
-//         margin-bottom: .86rem;
-//     }
-// }
 h2 {
-    margin-top: 5rem;
+    margin-top: 8rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,7 +9,6 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // background-image: url('/img/pexels-photo-2235832.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 25rem;
@@ -199,4 +108,11 @@ video {
         margin-right: 0;
         margin-bottom: .86rem;
     }
+}
+
+.logo1 {
+    display: flex;
+    position: relative;
+    align-items: center;
+    margin-top: 10rem;
 }
