--- a/front-end/src/components/Header/Header.scss
+++ b/front-end/src/components/Header/Header.scss
@@ -1,6 +1,4 @@
-header {
-    text-align: right;
-    padding: 10px 10px;
-    display: flex;
+.logo {
     position: fixed;
+    margin-top: -2rem;
 }
