--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 .App {
     text-align: center;
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 html {
