--- a/front-end/src/components/Search/Search.scss
+++ b/front-end/src/components/Search/Search.scss
@@ -18,7 +18,7 @@ video {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    position: absolute;
+    // position: absolute;
     z-index: -3;
     border-radius: 0% 0% 2px 2px;
     box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
